--- a/.github/workflows/branch.yaml
+++ b/.github/workflows/branch.yaml
@@ -22,6 +22,10 @@ jobs:
         run: docker-compose ps -a
       - name: Check logs
         run: docker-compose logs web
+      - name: Make migrations
+        run: docker-compose exec web python manage.py makemigrations
+      - name: Migrate tables
+        run: docker-compose exec web python manage.py migrate
       - name: Run tests
         run: docker-compose exec -T web pytest -p no:warnings --cov=.
 
